.playwright-mcp/console-2026-05-24T10-23-47-432Z.log
[      69ms] [INFO] %cDownload the React DevTools for a better development experience: https://reactjs.org/link/react-devtools font-weight:bold @ http://localhost:5500/vendor/react-dom.js:29904
[      96ms] [WARNING] You are using the in-browser Babel transformer. Be sure to precompile your scripts for production - https://babeljs.io/docs/setup/ @ http://localhost:5500/vendor/babel.js:2
[    1452ms] SyntaxError: /http:/localhost:5500/frames/worker-goals.jsx?v=25: Unexpected token, expected "," (181:24)

  179 |                       </div>
  180 |                     </div>
> 181 |                   </div>}
      |                         ^
  182 |                   {/* Linked Project row */}
  183 |                   {!isIncomplete && (() => {
  184 |                     const projects = window.ProjectStore ? window.ProjectStore.getProjects().map(p => p.name) : [];
    at e (http://localhost:5500/vendor/babel.js:3:260002)
    at t.raise (http://localhost:5500/vendor/babel.js:3:312098)
    at t.unexpected (http://localhost:5500/vendor/babel.js:3:312532)
    at t.expect (http://localhost:5500/vendor/babel.js:3:317386)
    at t.parseParenAndDistinguishExpression (http://localhost:5500/vendor/babel.js:3:490162)
    at t.parseParenAndDistinguishExpression (http://localhost:5500/vendor/babel.js:3:395143)
    at t.parseExprAtom (http://localhost:5500/vendor/babel.js:3:483024)
    at t.parseExprAtom (http://localhost:5500/vendor/babel.js:3:353993)
    at t.parseExprSubscripts (http://localhost:5500/vendor/babel.js:3:477958)
    at t.parseUpdate (http://localhost:5500/vendor/babel.js:3:477579)
    at t.parseMaybeUnary (http://localhost:5500/vendor/babel.js:3:477193)
    at t.parseMaybeUnaryOrPrivate (http://localhost:5500/vendor/babel.js:3:473986)
    at t.parseExprOps (http://localhost:5500/vendor/babel.js:3:474096)
    at t.parseMaybeConditional (http://localhost:5500/vendor/babel.js:3:473566)
    at t.parseMaybeAssign (http://localhost:5500/vendor/babel.js:3:472472)
    at t.parseMaybeAssign (http://localhost:5500/vendor/babel.js:3:393896)
    at http://localhost:5500/vendor/babel.js:3:381416
    at t.forwardNoArrowParamsConversionAt (http://localhost:5500/vendor/babel.js:3:382766)
    at t.parseConditional (http://localhost:5500/vendor/babel.js:3:381361)
    at t.parseMaybeConditional (http://localhost:5500/vendor/babel.js:3:473627)
    at t.parseMaybeAssign (http://localhost:5500/vendor/babel.js:3:472472)
    at t.parseMaybeAssign (http://localhost:5500/vendor/babel.js:3:393896)
    at t.parseExpressionBase (http://localhost:5500/vendor/babel.js:3:471593)
    at http://localhost:5500/vendor/babel.js:3:471500
    at t.allowInAnd (http://localhost:5500/vendor/babel.js:3:505261)
    at t.parseExpression (http://localhost:5500/vendor/babel.js:3:471469)
    at t.jsxParseExpressionContainer (http://localhost:5500/vendor/babel.js:3:351291)
    at t.jsxParseElementAt (http://localhost:5500/vendor/babel.js:3:353016)
    at t.jsxParseElement (http://localhost:5500/vendor/babel.js:3:353697)
    at t.parseExprAtom (http://localhost:5500/vendor/babel.js:3:353842)
    at t.parseExprSubscripts (http://localhost:5500/vendor/babel.js:3:477958)
    at t.parseUpdate (http://localhost:5500/vendor/babel.js:3:477579)
    at t.parseMaybeUnary (http://localhost:5500/vendor/babel.js:3:477193)
    at t.parseMaybeUnaryOrPrivate (http://localhost:5500/vendor/babel.js:3:473986)
    at t.parseExprOps (http://localhost:5500/vendor/babel.js:3:474096)
    at t.parseMaybeConditional (http://localhost:5500/vendor/babel.js:3:473566)
    at t.parseMaybeAssign (http://localhost:5500/vendor/babel.js:3:472472)
    at http://localhost:5500/vendor/babel.js:3:392819
    at t.tryParse (http://localhost:5500/vendor/babel.js:3:317491)
    at t.parseMaybeAssign (http://localhost:5500/vendor/babel.js:3:392763)
    at http://localhost:5500/vendor/babel.js:3:472052
    at t.allowInAnd (http://localhost:5500/vendor/babel.js:3:505261)
    at t.parseMaybeAssignAllowIn (http://localhost:5500/vendor/babel.js:3:472021)
    at t.parseMaybeAssignAllowInOrVoidPattern (http://localhost:5500/vendor/babel.js:3:506860)
    at t.parseParenAndDistinguishExpression (http://localhost:5500/vendor/babel.js:3:490455)
    at t.parseParenAndDistinguishExpression (http://localhost:5500/vendor/babel.js:3:395143)
    at t.parseExprAtom (http://localhost:5500/vendor/babel.js:3:483024)
    at t.parseExprAtom (http://localhost:5500/vendor/babel.js:3:353993)
    at t.parseExprSubscripts (http://localhost:5500/vendor/babel.js:3:477958)
    at t.parseUpdate (http://localhost:5500/vendor/babel.js:3:477579)
